--- a/00.Simulation.Rmd
+++ b/00.Simulation.Rmd
@@ -12,6 +12,8 @@ runtime: shiny_prerendered
 
 ```{r setup, include=FALSE}
 library(learnr)
+library("phyclust", quietly=T)
+source("readms.output.R", local =T)
 ```
 
 ## What is a simulation?
@@ -32,23 +34,20 @@ Simulate a ten coin tosses ($n=10$) using R function `sample(_____)` and probabi
 ```{r simulation_coin_toss, exercise=TRUE, exercise.lines=5}
 n <- 10
 p <- 0.5
-coin_toss <- sample(x=c("H","T"),size=_____, replace=_____, prob=_____)
-coin_toss
+sample(x=c("H","T"),size=_____, replace=_____, prob=_____)
 ```
 
 ```{r simulation_coin_toss-hint}
 n <- 10
 p <- 0.5
-coin_toss <- sample(x=c("H","T"),size=n, replace=T, prob=c(p,1-p))
-coin_toss
+sample(x=c("H","T"),size=n, replace=T, prob=c(p,1-p))
 ```
 
 ```{r simulation_coin_toss-solution}
 set.seed(123456)
 n <- 10
 p <- 0.5
-coin_toss <- sample(x=c("H","T"),size=n, replace=T, prob=c(p,1-p))
-coin_toss
+sample(x=c("H","T"),size=n, replace=T, prob=c(p,1-p))
 ```
 
 ### Exercise 2
@@ -59,16 +58,14 @@ Simulate directly the number of heads ($h'$) using `rbinom(_____)`:
 n <- 10
 p <- 0.5
 num_of_sim = 1
-h_prime <- rbinom(n=_____,size=_____,prob=_____)
-h_prime
+rbinom(n=_____,size=_____,prob=_____)
 ```
 
 ```{r simulation_coin_toss_rbinom-solution}
 n <- 10
 p <- 0.5
 num_of_sim = 1
-h_prime <- rbinom(n=num_of_sim,size=n,prob=p)
-h_prime
+rbinom(n=num_of_sim,size=n,prob=p)
 ```
 
 
@@ -126,7 +123,7 @@ source("readms.output.R", local =T)
 
 Use `read.ms.output(_____)` function to read ms output and print only the genotype matrix (i.e. `gametes`).
 
-```{r coalescent_sim_segsites, exercise=TRUE}
+```{r coalescent_sim_segsites, exercise=TRUE, exercise.lines=10}
 n<-10
 l<-10000
 N<-10000
@@ -164,6 +161,81 @@ sim_data <- read.ms.output(txt=msout)
 sim_data$gametes
 ```
 
+
+### Exercise 5
+
+Calculate summary statistics (number of segregating sites, number of haplotypes, $\pi$ and Tajima's $D$) for the simulations (use functions `S()`, `NH()`, `PI()` and `TajimaD()`, see source code):
+
+```{r summary_stats, exercise=TRUE, exercise.lines=15}
+n<-10
+l<-10000
+N<-10000
+u<-1e-8
+num_of_sim <- 10
+theta <- 2*N*u*l
+msout <- ms(nsam=n,nreps=num_of_sim,opt=paste("-t",theta))
+sim_data <- read.ms.output(txt=msout)
+
+```
+
+```{r summary_stats-solution}
+n<-10
+l<-10000
+N<-10000
+u<-1e-8
+num_of_sim <- 10
+theta <- 2*N*u*l
+msout <- ms(nsam=n,nreps=num_of_sim,opt=paste("-t",theta))
+sim_data <- read.ms.output(txt=msout)
+
+S(sim_data)
+NH(sim_data)
+PI(sim_data)
+TajimaD(sim_data)
+```
+
+
+
+```{r summary_stats-setup}
+S<-function(a) {return(a$segsites)}
+NH<-function(a) {
+  NH<-vector(length=a$nreps)
+  for(i in seq_len(a$nreps)) {
+    NH[i] <- nrow(unique(a$gametes[[i]]))
+  }
+  return(NH)
+}
+PI<-function(a) {
+  PI<-vector(mode='numeric', length=a$nreps)
+  for(i in seq_len(a$nreps)) {
+    if(a$segsites[i]>0){
+      for(j in seq_len(a$segsites[i])) {
+         if(a$segsites[i]>1) {
+          loc<-sum(a$gametes[[i]][,j])
+        } else {
+          loc<-sum(a$gametes[[i]])
+        }
+        PI[i] <- PI[i] + 2*loc*(a$nsam-loc)
+      }
+    }
+  }
+  return(PI/(a$nsam*(a$nsam-1)))
+}
+thetaW<-function(a) {
+  a1<-sum(1/(1:(a$nsam-1)))
+  return(a$segsites/a1)
+}
+TajimaD<-function(a) {
+  a1<-sum(1/(1:(a$nsam-1)))
+  a2<-sum(1/((1:(a$nsam-1))^2))
+  b1<-(a$nsam+1)/3/(a$nsam-1)
+  b2<-2*(a$nsam^2+a$nsam+3)/(9*a$nsam*(a$nsam-1))
+  c1<-b1-1/a1
+  c2<-b2-(a$nsam+2)/(a1*a$nsam)+a2/(a1^2)
+  temp <- c1/a1*a$segsites + c2/(a1^2+a2)*a$segsites*(a$segsites-1)
+  return( (PI(a)-thetaW(a))/sqrt(temp) )
+}
+```
 
 
 
