--- a/1.ABC.Rmd
+++ b/1.ABC.Rmd
@@ -10,42 +10,85 @@ output: learnr::tutorial
 runtime: shiny_prerendered
 ---
 
-```{r setup, include=FALSE}
+## Setup (just for information)
+
+```{r setup, include=TRUE}
 library(learnr)
-library("phyclust", quietly=T)
+library(phyclust, quietly=T)
+
+# functions for the coin toss experiment analysis
+flip_coin_likelihood <- function(p,h,t){
+  likelihood <- choose(h+t,h) * p^h * (1-p)^t
+  return (list(p=p,l=likelihood))
+}
+
+flip_coin_likelihood_approx <- function(p,h,t,num_of_sim){
+  likelihood <- array(dim=length(p))
+  for (i in seq_along(p)){
+    likelihood[i] <- sum(rbinom(n=num_of_sim,size=h+t,prob=p[i])==h)/num_of_sim  
+  }
+  return (list(p=p,l=likelihood))
+}
+
+flip_coin_posterior_approx <- function(h,t,a,b,num_of_sim){
+  p_prime <- rbeta(num_of_sim,a,b)
+  d_prime <- rbinom(num_of_sim,h+t,p_prime)
+  p_prime_accept <- p_prime[which(d_prime==h)]
+  d_prime_accept <- d_prime[which(d_prime==h)]
+  return(list(p_prime=p_prime,
+              d_prime=d_prime,
+              p_prime_accept=p_prime_accept,
+              d_prime_accept=d_prime_accept))
+}
+
+
+# for function read.ms.output()
 source("readms.output.R", local =T)
-Orange         <- "#E69F00"
-Sky_Blue       <- "#56B4E9" 
-Bluish_Green   <- "#009E73"
-Yellow         <- "#F0E442"
-Blue           <- "#0072B2"
-Vermillion     <- "#D55E00"
-Reddish_Purple <- "#CC79A7"
-Black_transparency         <- rgb(  0,  0,  0,100,maxColorValue=255)
-Orange_transparency        <- rgb(230,159,  0,100,maxColorValue=255)
-SkyBlue_transparency       <- rgb( 86,180,233,100,maxColorValue=255)
-BluishGreen_transparency   <- rgb(  0,158,115,100,maxColorValue=255)
-Yellow_transparency        <- rgb(240,228, 66,100,maxColorValue=255)
-Blue_transparency          <- rgb(  0,114,178,100,maxColorValue=255)
-Vermillion_transparency    <- rgb(213, 94,  0,100,maxColorValue=255)
-ReddishPurple_transparency <- rgb(204,121,167,100,maxColorValue=255)
+
+# functions to calculate summary statistics from ms output
+S <- function(a) {return(a$segsites)}
+
+NH <- function(a) {
+  NH<-vector(length=a$nreps)
+  for(i in seq_len(a$nreps)) {
+    NH[i] <- nrow(unique(a$gametes[[i]]))
+  }
+  return(NH)
+}
+
+PI <- function(a) {
+  PI<-vector(mode='numeric', length=a$nreps)
+  for(i in seq_len(a$nreps)) {
+    if(a$segsites[i]>0){
+      for(j in seq_len(a$segsites[i])) {
+         if(a$segsites[i]>1) {
+          loc<-sum(a$gametes[[i]][,j])
+        } else {
+          loc<-sum(a$gametes[[i]])
+        }
+        PI[i] <- PI[i] + 2*loc*(a$nsam-loc)
+      }
+    }
+  }
+  return(PI/(a$nsam*(a$nsam-1)))
+}
+
+thetaW <- function(a) {
+  a1<-sum(1/(1:(a$nsam-1)))
+  return(a$segsites/a1)
+}
+
+TajimaD <- function(a) {
+  a1<-sum(1/(1:(a$nsam-1)))
+  a2<-sum(1/((1:(a$nsam-1))^2))
+  b1<-(a$nsam+1)/3/(a$nsam-1)
+  b2<-2*(a$nsam^2+a$nsam+3)/(9*a$nsam*(a$nsam-1))
+  c1<-b1-1/a1
+  c2<-b2-(a$nsam+2)/(a1*a$nsam)+a2/(a1^2)
+  temp <- c1/a1*a$segsites + c2/(a1^2+a2)*a$segsites*(a$segsites-1)
+  return( (PI(a)-thetaW(a))/sqrt(temp) )
+}
 ```
-
-## Setup
-
-[Colorblind friendly palette](http://jfly.iam.u-tokyo.ac.jp/color/):
-
-```{r color_setup, include=TRUE}
-Orange         <- "#E69F00"
-Sky_Blue       <- "#56B4E9" 
-Bluish_Green   <- "#009E73"
-Yellow         <- "#F0E442"
-Blue           <- "#0072B2"
-Vermillion     <- "#D55E00"
-Reddish_Purple <- "#CC79A7"
-```
-
-
 
 ## Approximation 1: Simulation
 
@@ -84,21 +127,7 @@ The true value (for $p=0.5$, $h=4$ and $t=6$) is `r choose(10, 4) * 0.5^10`. Is 
 
 ### Exercise 2
 
-Plot the likelihood profile from using simulation-based estimates of the likelihood. Compare the results with the analytical solution. Why should we bother about a (slower, less accurate) simulation-based solution? For this exercise you have available two functions: `flip_coin_likelihood()` and `flip_coin_likelihood_approx()` (see source code for details).
-
-```{r likelihood_function-setup}
-flip_coin_likelihood <- function(p,h,t){
-  likelihood <- choose(h+t,h) * p^h * (1-p)^t
-  return (list(p=p,l=likelihood))
-}
-flip_coin_likelihood_approx <- function(p,h,t,num_of_sim){
-  likelihood <- array(dim=length(p))
-  for (i in seq_along(p)){
-    likelihood[i] <- sum(rbinom(n=num_of_sim,size=h+t,prob=p[i])==h)/num_of_sim  
-  }
-  return (list(p=p,l=likelihood))
-}
-```
+Plot the likelihood profile from using simulation-based estimates of the likelihood. Compare the results with the analytical solution. Why should we bother about a (slower, less accurate) simulation-based solution? For this exercise you have available two functions: `flip_coin_likelihood()` and `flip_coin_likelihood_approx()` (see setup for details).
 
 
 ```{r likelihood_function, exercise=TRUE}
@@ -106,12 +135,10 @@ h = 4; t = 6; num_of_sim = 1000
 p = seq(0,1,0.01)
 l_profile_true   <- flip_coin_likelihood(p,h,t)
 l_profile_approx <- flip_coin_likelihood_approx(p,h,t,num_of_sim)
-plot(x = l_profile_approx$p,
-     y = l_profile_approx$l,
-     xlab = "p", ylab = "Likelihood", type = "l", col = Bluish_Green, lwd=2)
-lines(x = l_profile_true$p,
-      y = l_profile_true$l,
-      col = Bluish_Green)
+plot(l_profile_approx$p, l_profile_approx$l,
+     xlab = "p", ylab = "Likelihood", type = "l", col = "red", lwd=2)
+lines(l_profile_true$p, l_profile_true$l,
+      col = "red")
 ```
 
 
@@ -180,20 +207,7 @@ p_prime_accept
 
 ### Exercise 4
 
-Use `flip_coin_posterior_approx()` function (see source code for details) to crate a sample from the posterior probability distribution. Create a scatter plot to show the parameter value $p'$ and data $D'$ for all simulations. Highlight simulations that match observed data $D$. Then, use the sample of the posterior probability to plot an estimate of the posterior probability (hint: use `hist()`).
-
-```{r flip_coin_posterior_approx}
-flip_coin_posterior_approx <- function(h,t,a,b,num_of_sim){
-  p_prime <- rbeta(num_of_sim,a,b)
-  d_prime <- rbinom(num_of_sim,h+t,p_prime)
-  p_prime_accept <- p_prime[which(d_prime==h)]
-  d_prime_accept <- d_prime[which(d_prime==h)]
-  return(list(p_prime=p_prime,
-              d_prime=d_prime,
-              p_prime_accept=p_prime_accept,
-              d_prime_accept=d_prime_accept))
-}
-```
+Use `flip_coin_posterior_approx()` function (see setup for details) to crate a sample from the posterior probability distribution. Create a scatter plot to show the parameter value $p'$ and data $D'$ for all simulations. Highlight simulations that match observed data $D$. Then, use the sample of the posterior probability to plot an estimate of the posterior probability (hint: use `hist()`).
 
 
 ```{r plot_posterior_approx, exercise=TRUE, exercise.lines=20, exercise.setup="flip_coin_posterior_approx"}
@@ -208,8 +222,8 @@ res <- flip_coin_posterior_approx(h,t,a,b,num_of_sim)
 plot(res$p_prime,res$d_prime,
      xlab = expression(italic(p)*"'"),
      ylab = expression(italic(D)*"'"))
-abline(h = h, col = Reddish_Purple)
-points(res$p_prime_accept, res$d_prime_accept, col = Vermillion)
+abline(h = h, col = "blue")
+points(res$p_prime_accept, res$d_prime_accept, col = "blue")
 
 ```
 
@@ -221,8 +235,8 @@ res <- flip_coin_posterior_approx(h,t,a,b,num_of_sim)
 plot(res$p_prime,res$d_prime,
      xlab = expression(italic(p)*"'"),
      ylab = expression(italic(D)*"'"))
-abline(h = h, col = Reddish_Purple)
-points(res$p_prime_accept, res$d_prime_accept, col = Vermillion)
+abline(h = h, col = "blue")
+points(res$p_prime_accept, res$d_prime_accept, col = "blue")
 hist(res$p_prime,
      breaks = seq(0,1,0.02),
      col = "grey",
@@ -232,10 +246,10 @@ hist(res$p_prime,
      ylab = "probability density")
 hist(res$p_prime_accept,
      breaks = seq(0,1,0.02),
-     col = Vermillion_transparency,
+     col = "blue",
      freq = FALSE, add = TRUE); box()
 lines(seq(0,1,0.001),dbeta(x=seq(0,1,0.001),a+h,b+t),
-      col = Vermillion, lwd = 3)
+      col = "blue", lwd = 3)
 ```
 
 
@@ -278,50 +292,9 @@ We are going to consider now population genetics data. We have two data sets of 
 
 Explore the data. How many polymorphic sites are there? (you can use functions `S()`, `NH()`, `PI()` and `TajimaD()`) How would you apply the rejection algorithm?
 
-```{r explore_genetic_data, exercise=TRUE, exercise.lines=6, exercise.setup = "summary_statistics"}
+```{r explore_genetic_data, exercise=TRUE, exercise.lines=6}
 dataset1 <- read.ms.output(file="/change/to/your/path/dataset1.txt")
 dataset2 <- read.ms.output(file="/home/miguel/Work/Teaching/ABCRF tutorial/dataset2.txt")
-```
-
-```{r summary_statistics}
-S<-function(a) {return(a$segsites)}
-NH<-function(a) {
-  NH<-vector(length=a$nreps)
-  for(i in seq_len(a$nreps)) {
-    NH[i] <- nrow(unique(a$gametes[[i]]))
-  }
-  return(NH)
-}
-PI<-function(a) {
-  PI<-vector(mode='numeric', length=a$nreps)
-  for(i in seq_len(a$nreps)) {
-    if(a$segsites[i]>0){
-      for(j in seq_len(a$segsites[i])) {
-         if(a$segsites[i]>1) {
-          loc<-sum(a$gametes[[i]][,j])
-        } else {
-          loc<-sum(a$gametes[[i]])
-        }
-        PI[i] <- PI[i] + 2*loc*(a$nsam-loc)
-      }
-    }
-  }
-  return(PI/(a$nsam*(a$nsam-1)))
-}
-thetaW<-function(a) {
-  a1<-sum(1/(1:(a$nsam-1)))
-  return(a$segsites/a1)
-}
-TajimaD<-function(a) {
-  a1<-sum(1/(1:(a$nsam-1)))
-  a2<-sum(1/((1:(a$nsam-1))^2))
-  b1<-(a$nsam+1)/3/(a$nsam-1)
-  b2<-2*(a$nsam^2+a$nsam+3)/(9*a$nsam*(a$nsam-1))
-  c1<-b1-1/a1
-  c2<-b2-(a$nsam+2)/(a1*a$nsam)+a2/(a1^2)
-  temp <- c1/a1*a$segsites + c2/(a1^2+a2)*a$segsites*(a$segsites-1)
-  return( (PI(a)-thetaW(a))/sqrt(temp) )
-}
 ```
 
 We could try to apply the same rejection algorithm described above, but the structure of the data is more complex and an exact match would occur rarely in simulations. So we use the second approximation of ABC, instead of the data we use summary statistics ($S$) from the data to classify the simulation as a match to the observation. It is said now that we are approximating the likelihood of $p$ given the summary statistic, $L(p|S)$, rather than the likelihood of $p$ given the data, $L(p|D)$.
@@ -348,7 +321,7 @@ We could try to apply the same rejection algorithm described above, but the stru
 
 Simulate sequence data with `ms` (from `phyclust` package) using the standard coalescent model (single population of constant size). Simulate with $\theta$ values taken from a log-uniform prior probability distribution (option `"-t tbs"`).
 
-```{r rejection_algortihm_sumstats, exercise=TRUE, exercise.setup = "summary_statistics"}
+```{r simulation_coalescent, exercise=TRUE}
 sample_size = 50
 num_of_sim = 10 # use larger number at your own risk /!\
 theta_prime <- 10^runif(num_of_sim,min=-1,max=2)
@@ -386,11 +359,66 @@ saveRDS(ref_table,file="ref_table_1.RDS")
 
 ### Exercise 8
 
-```{r eval=FALSE, echo=TRUE}
+Apply the rejection algortihm using one summary statistic. Start with the number of segregating sites and the number of haplotypes (`S`, `NH`), then try $\pi$ (`PI`).
+
+```{r rejection_algortihm_sumstats, exercise=TRUE, exercise.lines=35}
 target <- data.frame(S  = c(50,23),
                      PI = c(11.56163,1.354286),
+                     NH = c(21,18),
+                     TD = c(0.123358,-2.386268),
                      row.names = c("dataset1","dataset2"))
+ref_table <- readRDS(file="/home/miguel/Work/Teaching/ABCRF tutorial/ref_table_1.RDS")
+
 ```
+
+```{r rejection_algortihm_sumstats-hint}
+target <- data.frame(S  = c(50,23),
+                     PI = c(11.56163,1.354286),
+                     NH = c(21,18),
+                     TD = c(0.123358,-2.386268),
+                     row.names = c("dataset1","dataset2"))
+ref_table <- readRDS(file="/home/miguel/Work/Teaching/ABCRF tutorial/ref_table_1.RDS")
+target
+head(ref_table)
+```
+
+
+```{r rejection_algortihm_sumstats-solution}
+target <- data.frame(S  = c(50,23),
+                     PI = c(11.56163,1.354286),
+                     NH = c(21,18),
+                     TD = c(0.123358,-2.386268),
+                     row.names = c("dataset1","dataset2"))
+ref_table <- readRDS(file="/home/miguel/Work/Teaching/ABCRF tutorial/ref_table_1.RDS")
+
+num_of_sims <- 10000 # use a subset of simulation from a total of 1 000 000
+
+SS          <- target$S[1]
+SS_prime    <- ref_table$S[seq_len(num_of_sims)]
+theta_prime <- ref_table$theta[seq_len(num_of_sims)]
+theta_prime_accept <- theta_prime[which(SS_prime==SS)] 
+SS_prime_accept <- SS_prime[which(SS_prime==SS)] 
+
+plot(log10(theta_prime),SS_prime,
+     xlab = expression(log[10](theta*"'")),
+     ylab = "S'",
+     ylim = c(0,100))
+abline(h = SS, col = "blue")
+points(log10(theta_prime_accept), SS_prime_accept, col = "blue")
+hist(log10(theta_prime),
+     breaks = seq(-1,2,0.05),
+     col = "grey",
+     freq = FALSE,
+     ylim = c(0,4),
+     main = "", xlab = expression(log[10](theta)),
+     ylab = "probability density")
+hist(x = log10(theta_prime_accept),
+     breaks = seq(-1,2,0.05),
+     col = "blue",
+     freq = FALSE,
+     add = TRUE); box()
+```
+
 
 
 ## Approximation 3: Tolerance
